[package]
name = "x2y"
version = "0.1.2"
authors = ["Ed Needham <ed@edneedham.dev>"]
homepage = "https://github.com/edneedham/x2y"
repository = "https://github.com/edneedham/x2y"
license = "MIT"
keywords = ["yaml", "json", "toml", "serialisation"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"

description = """
A data-serialization file transcoder written in Rust.
"""

[dependencies]
clap = { version = "4.4.1", features = ["cargo"] }
thiserror = "1.0.47"
serde = { version = "1.0.183", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
env_logger = "0.10.0"
log = "0.4.20"
toml = "0.7.8"

[dev-dependencies]
assert_cmd = "2.0.12"
claims = "0.7.1"
predicates = "3.0.3"
tempfile = "3.8.0"
once_cell = "1.18.0"
